--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,7 +1,7 @@
 .header{
     background-color: #0B0B0B;
     color: #e6e6e6;
-    height: 95vh;
+    height: 95%;
     .sp{
         position: absolute;
         top: 5px;
