--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -1,9 +1,9 @@
 .about{
-    height: 100vh;
+    height: 100%;
 
     
 .title{
-  padding-top: 100px;
+  padding-top: 160px;
   padding-left: 25px;
     text-align: start;
     width: 70%;
@@ -13,11 +13,29 @@
 .paragraphs{
     padding-top: 35px;
    padding-left: 679px;
-   font-weight: 300;
+   font-weight: 400;
    line-height: 30px;
    padding-right: 15px;
 }
 .p1{opacity: 0;}
 .p2{opacity: 0;}
 .p3{opacity: 0;}
+
+span a{
+  color: gray;
+  text-decoration: none;
+  transition: opacity 0.5s ease-in-out;
+}
+
+}
+
+.text {
+  font-size: 80px;
+  font-weight: 900;
+}
+
+.gg {
+  width: 900px;
+  height: 900px;
+  background: green;
 }
