--- a/src/components/Contact/style.scss
+++ b/src/components/Contact/style.scss
@@ -2,10 +2,23 @@ h1{
     text-align: center;
     font-size: 40px;
     font-weight: 800;
+    padding-top: 200px;
 }
 
 h5{
     padding-left: 25px;
     font-weight: 600;
+    padding-bottom: 17px;
+    padding-top: 20px;
 
+}
+section{
+    padding-top: 100px;
+    padding-left: 600px;
+    padding-bottom: 20px;
+
+    input{
+        padding: 10px 20px;
+    }
+    
 }
